; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_sd.c_sd_print_sense_hdr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_sd.c_sd_print_sense_hdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_disk = type { i32 }
%struct.scsi_sense_hdr = type { i32, i32 }

@KERN_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.scsi_disk*, %struct.scsi_sense_hdr*)* @sd_print_sense_hdr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sd_print_sense_hdr(%struct.scsi_disk* %0, %struct.scsi_sense_hdr* %1) #0 {
  %3 = alloca %struct.scsi_disk*, align 8
  %4 = alloca %struct.scsi_sense_hdr*, align 8
  store %struct.scsi_disk* %0, %struct.scsi_disk** %3, align 8
  store %struct.scsi_sense_hdr* %1, %struct.scsi_sense_hdr** %4, align 8
  %5 = load i32, i32* @KERN_INFO, align 4
  %6 = load %struct.scsi_disk*, %struct.scsi_disk** %3, align 8
  %7 = call i32 @sd_printk(i32 %5, %struct.scsi_disk* %6, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.scsi_sense_hdr*, %struct.scsi_sense_hdr** %4, align 8
  %9 = call i32 @scsi_show_sense_hdr(%struct.scsi_sense_hdr* %8)
  %10 = load i32, i32* @KERN_INFO, align 4
  %11 = load %struct.scsi_disk*, %struct.scsi_disk** %3, align 8
  %12 = call i32 @sd_printk(i32 %10, %struct.scsi_disk* %11, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %13 = load %struct.scsi_sense_hdr*, %struct.scsi_sense_hdr** %4, align 8
  %14 = getelementptr inbounds %struct.scsi_sense_hdr, %struct.scsi_sense_hdr* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.scsi_sense_hdr*, %struct.scsi_sense_hdr** %4, align 8
  %17 = getelementptr inbounds %struct.scsi_sense_hdr, %struct.scsi_sense_hdr* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @scsi_show_extd_sense(i32 %15, i32 %18)
  ret void
}

declare dso_local i32 @sd_printk(i32, %struct.scsi_disk*, i8*) #1

declare dso_local i32 @scsi_show_sense_hdr(%struct.scsi_sense_hdr*) #1

declare dso_local i32 @scsi_show_extd_sense(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
